# Lo-FI-Scanner

./: README.md  pyproject.toml
src/lofi_scanner/: __init__.py  cli.py  exploit.py  payloads.py  scanner.py  signatures.py
tests/: request_mocking.py  test_cli.py  test_exploit.py  test_scanner.py
tests/fixtures/: false_positive_response.txt  true_positive_response.txt
