[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lofi-scanner"
version = "0.1.0"
description = "Local File Inclusion scanning and controlled exploitation helper"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
lofi-scanner = "lofi_scanner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
